--- a/learning.html
+++ b/learning.html
@@ -31,20 +31,13 @@
     </header>
     <div class="terminal">
       <div id="cmd-ref" class="cmd-ref">
-        <strong>Commands</strong>
-        <div>ls — list files</div>
-        <div>cd <dir> — enter Dir</div>
-        <div>cd .. — go back</div>
-        <div>pwd — current path</div>
-        <div>cat <file> — read file</div>
-        <div>echo <text> — print</div>
-        <div>echo > / >> — write</div>
-        <div>mkdir <dir> — new dir</div>
-        <div>touch <file> — new file</div>
-        <div>rm <file> — remove</div>
-        <div>rmdir <dir> — rm dir</div>
-        <div>man <cmd> — manual</div>
-        <div>help — all cmds</div>
+        <strong>ACT 1 BASICS</strong>
+        <div><span class="cmd">ls</span> — list files</div>
+        <div><span class="cmd">cd &lt;dir&gt;</span> — go to room</div>
+        <div><span class="cmd">cd ..</span> — go back</div>
+        <div><span class="cmd">cat &lt;file&gt;</span> — read file</div>
+        <div><span class="cmd">rm &lt;file&gt;</span> — delete file</div>
+        <div class="hint">Explore every room!</div>
       </div>
       <div id="output" class="output"></div>
       <div class="input-line">
